--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -1,3 +1,28 @@
+
+@article{Nube,
+  author    = {S/A},
+  title     = {Almacenamiento en la nube, Ventajas y retos},
+  journal   = {D-Link {Building Networks for people}},
+  year      = {2011},
+  url       = {http://www.dlink.com/es/es/-/media/files/b2b-briefs/es/dlinkalmacenamientoenlanube.pdf},
+}
+
+@article{Nubecomp,
+  author    = {Francisco Ceballos},
+  title     = {Cloud Computing, detonador de competitividad },
+  journal   = {Forbes},
+  year      = {2013},
+  url       = {https://www.forbes.com.mx/cloud-computing-detonador-de-competitividad/},
+}
+
+@article{Compnube,
+  author    = {Microsoft},
+  title     = {“Cómputo en la nube”: nuevo detonador para la competitividad de México },
+  journal   = {Instituto Mexicano pala la Competitividad},
+  year      = {2012},
+  url       = {http://imco.org.mx/wp-content/uploads/2012/06/Computo_en_la_nube-competitividad.pdf},
+}
+
 @misc{Bellare,
    author = {Bellare, Keelveedhi, Ristenpart},
    title = "Dupless: Server-aided encryption for deduplicated storage.",
@@ -84,6 +109,35 @@ distributed file system.},
     howpublished = {Universidad Nacional Autónoma de México},
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
  }
+
+@book{menezes
+  author    = {Alfred Menezes and
+               Paul C. van Oorschot and
+               Scott A. Vanstone},
+  title     = {Handbook of Applied Cryptography},
+  publisher = {{CRC} Press},
+  year      = {1996},
+  isbn      = {0-8493-8523-7},
+  timestamp = {Sun, 05 Feb 2017 17:14:48 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/books/crc/MenezesOV96},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@book{paar
+  author    = {Christof Paar and
+               Jan Pelzl},
+  title     = {Understanding Cryptography - {A} Textbook for Students and Practitioners},
+  publisher = {Springer},
+  year      = {2010},
+  url       = {http://dx.doi.org/10.1007/978-3-642-04101-3},
+  doi       = {10.1007/978-3-642-04101-3},
+  isbn      = {978-3-642-04100-6},
+  timestamp = {Fri, 04 Feb 2011 10:00:12 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0023872},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
 
 @misc{servicios,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
