--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -1,5 +1,5 @@
 
-@article{Nube,
+@article{Nubei,
   author    = {S/A},
   title     = {Almacenamiento en la nube, Ventajas y retos},
   journal   = {D-Link {Building Networks for people}},
@@ -81,8 +81,8 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   author    = {Cox L., Murray C. y Noble B.},
   title     = {SIGOPS Oper. Syst.},
   publisher = {Pastiche: making backup cheap and easy},
-  pages     = {36:285{298},
-  year      = {2002},
+  pages     = {36:285298},
+  year      = {2002}
 }
 
  @book{tahoe,
@@ -90,13 +90,12 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   title     = {Tahoe: The least-authority},
   publisher = {In Proceedings of the 4th ACM},
   pages     = {21-26},
-  year      = {2008},
+  year      = {2008}
 }
 
 @book{donceur,
-   author = {Donceur J. R., Adya A., Bolosky W. J., Simon D. y Theimer M.},
-   title = {Reclaiming space from duplicate files in a serverless
-distributed file system.},
+   author = {Donceur J. R. and Adya A. and Bolosky W. J. and Simon D. and Theimer M.},
+   title = {Reclaiming space from duplicate files in a serverless distributed file system.},
     publisher = {ICDCS},
     pages = {617-624},
    year = {2002}
@@ -110,10 +109,8 @@ distributed file system.},
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
  }
 
-@book{menezes
-  author    = {Alfred Menezes and
-               Paul C. van Oorschot and
-               Scott A. Vanstone},
+@book{menezes,
+  author    = {Alfred Menezes and Paul C. van Oorschot and Scott A. Vanstone},
   title     = {Handbook of Applied Cryptography},
   publisher = {{CRC} Press},
   year      = {1996},
@@ -123,9 +120,8 @@ distributed file system.},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-@book{paar
-  author    = {Christof Paar and
-               Jan Pelzl},
+@book{paar,
+  author    = {Christof Paar and Jan Pelzl},
   title     = {Understanding Cryptography - {A} Textbook for Students and Practitioners},
   publisher = {Springer},
   year      = {2010},
@@ -180,11 +176,8 @@ distributed file system.},
 
 @mastersthesis{ciegas,
  author = {García Zamora Claudia Patricia},
- title = "Diseño y Desarrollo de un Sistema para Elecciones
-Electrónicas Seguras (SELES)
-.",
- school = {Centro de Investigación y de Estudios Avanzados
-del Instituto Politécnico Nacional},
+ title = "Diseño y Desarrollo de un Sistema para Elecciones Electrónicas Seguras (SELES).",
+ school = {Centro de Investigación y de Estudios Avanzados del Instituto Politécnico Nacional},
  year = "2005"
 }
 
@@ -198,10 +191,8 @@ del Instituto Politécnico Nacional},
 } 
 
 @book{katz,
-  author    = {Jonathan Katz and
-               Yehuda Lindell},
-  title     = {Introduction to Modern Cryptography: Principles
-and Protocols},
+  author    = {Jonathan Katz and Yehuda Lindell},
+  title     = {Introduction to Modern Cryptography: Principles and Protocols},
   publisher = {IACR Cryptology ePrint Archive},
   year      = {2007},
   isbn      = {978-1584885511}
